integrated first draft of Streamlit app demo

--- a/env.yaml
+++ b/env.yaml
@@ -2,7 +2,7 @@ name: mscids-cip-sw03
 channels:
   - conda-forge
 dependencies:
-  - python
+  - python=3.12
   - marimo
   - pandas
   - altair
@@ -15,3 +15,5 @@ dependencies:
   - uvicorn
   - dash
   - flask
+  - streamlit>=1.41
+  - protobuf>=4.25
