various minor changes and README update.

--- a/env.yaml
+++ b/env.yaml
@@ -3,17 +3,17 @@ channels:
   - conda-forge
 dependencies:
   - python=3.12
-  - marimo
-  - pandas
   - altair
-  - pyarrow
   - duckdb
   - fastapi
-  - pydantic
   - fastavro
+  - marimo
+  - numpy
+  - pandas
+  - pillow
+  - protobuf>=4.25,<6
+  - pydantic
+  - pyarrow
   - requests
+  - streamlit>=1.41,<2
   - uvicorn
-  - dash
-  - flask
-  - streamlit>=1.41
-  - protobuf>=4.25
