--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-marimo
-pandas
 altair
-pyarrow
 duckdb
 fastapi
-pydantic
 fastavro
-requests
-uvicorn
-dash
-flask
-streamlit>=1.41,<2
+marimo
+numpy
+pandas
+pillow
 protobuf>=4.25,<6
+pydantic
+pyarrow
+requests
+streamlit>=1.41,<2
+uvicorn
